Gather proper colors

--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -29,11 +29,25 @@
 
     <div class="color-list">
       <div class="style-swatch--invert bg-yellow">$yellow</div>
+      <div class="style-swatch--invert bg-yellow-2">$yellow-2</div>
+      <div class="style-swatch--invert bg-yellow-3">$yellow-3</div>
+      <div class="style-swatch--invert bg-yellow-4">$yellow-4</div>
+      <div class="style-swatch--invert bg-yellow-5">$yellow-5</div>
+      <div class="style-swatch bg-orange">$orange</div>
       <div class="style-swatch bg-blue">$blue</div>
-      <div class="style-swatch bg-light-blue">$light-blue</div>
+      <div class="style-swatch bg-blue-2">$blue-2</div>
+      <div class="style-swatch bg-blue-3">$blue-3</div>
+      <div class="style-swatch bg-blue-4">$blue-4</div>
+      <div class="style-swatch bg-blue-5">$blue-5</div>
+      <div class="style-swatch bg-blue-6">$blue-6</div>
+      <div class="style-swatch bg-blue-7">$blue-7</div>
       <div class="style-swatch bg-grey">$grey</div>
-      <div class="style-swatch bg-light-grey">$light-grey</div>
-      <div class="style-swatch--invert bg-xlight-grey">$xlight-grey</div>
+      <div class="style-swatch--invert bg-grey-2">$grey-2</div>
+      <div class="style-swatch--invert bg-grey-3">$grey-3</div>
+      <div class="style-swatch--invert bg-grey-4">$grey-4</div>
+      <div class="style-swatch--invert bg-grey-5">$grey-5</div>
+      <div class="style-swatch--invert bg-grey-6">$grey-6</div>
+      <div class="style-swatch bg-grey-7">$grey-7</div>
       <div class="style-swatch bg-black">$black</div>
       <div class="style-swatch--invert bg-white">$white</div>
     </div>
