Add code previews to styles

--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -9,6 +9,7 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/bower_components/prism/themes/prism.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -55,57 +56,67 @@
 
     <h2 class="section-title">Headings</h2>
     <section class="main-content">
-      <div class="style-description">
-        <h4>Headings</h4>
-      </div>
-      <div class="style-preview">
-        <h1>Cantina Heading 1</h1>
-        <h2>Cantina Heading 2</h2>
-        <h3>Cantina Heading 3</h3>
-        <h4>Cantina Heading 4</h4>
-        <h5>Cantina Heading 5</h5>
-        <h6>Cantina Heading 6</h6>
+      <div class="style">
+        <div class="style-description">
+          <h4>Headings</h4>
+        </div>
+        <pre><code class="language-html" id="test">
+        </code></pre>
+        <div class="style-preview" id="test-src">
+          <h1 class="alpha">Cantina Heading 1</h1>
+          <h2>Cantina Heading 2</h2>
+          <h3>Cantina Heading 3</h3>
+          <h4>Cantina Heading 4</h4>
+          <h5>Cantina Heading 5</h5>
+          <h6>Cantina Heading 6</h6>
+        </div>
       </div>
     </section>
 
     <h2 class="section-title">Text</h2>
     <section class="main-content">
-      <div class="style-description">
-        <h4>Paragraphs</h4>
-        <p>This is a paragraph</p>
+      <div class="style">
+        <div class="style-description">
+          <h4>Paragraphs</h4>
+          <p>This is a paragraph</p>
+        </div>
+        <div class="style-preview">
+          <p>Seven flung down his brush, and had just begun 'Well, of all the unjust  things&mdash;' when his eye chanced to fall upon Alice, as she stood watching  them, and he checked himself suddenly: the others looked round also, and  all of them bowed low.</p>
+          <p>'Would you tell me,' said Alice, a little timidly, 'why you are painting  those roses?'</p>
+        </div>
       </div>
-      <div class="style-preview">
-        <p>Seven flung down his brush, and had just begun 'Well, of all the unjust  things&mdash;' when his eye chanced to fall upon Alice, as she stood watching  them, and he checked himself suddenly: the others looked round also, and  all of them bowed low.</p>
-        <p>'Would you tell me,' said Alice, a little timidly, 'why you are painting  those roses?'</p>
+      <div class="style">
+        <div class="style-description">
+          <h4>Unordered Lists</h4>
+        </div>
+        <div class="style-preview">
+          <ul>
+            <li>Seven flung down his brush, and had just begun 'Well, of all the unjust  things&mdash;' when his eye chanced to fall upon Alice, as she stood watching  them, and he checked himself suddenly: the others looked round also, and  all of them bowed low</li>
+            <li> 'Would you tell me,' said Alice, a little timidly, 'why you are painting  those roses?' Five and Seven said nothing, but looked at Two</li>
+            <li> Two began in a low  voice, 'Why the fact is, you see, Miss, this here ought to have been a  RED rose-tree, and we put a white one in by mistake; and if the Queen  was to find it out, we should all have our heads cut off, you know</li>
+            <li>  So you see, Miss, we're doing our best, afore she comes, to&mdash;' At this  moment Five, who had been anxiously looking across the garden, called  out 'The Queen! The Queen!' and the three gardeners instantly threw  themselves flat upon their faces</li>
+            <li> There was a sound of many footsteps,  and Alice looked round, eager to see the Queen</li>
+          </ul>
+        </div>
       </div>
-      <div class="style-description">
-        <h4>Unordered Lists</h4>
-      </div>
-      <div class="style-preview">
-        <ul>
-          <li>Seven flung down his brush, and had just begun 'Well, of all the unjust  things&mdash;' when his eye chanced to fall upon Alice, as she stood watching  them, and he checked himself suddenly: the others looked round also, and  all of them bowed low</li>
-          <li> 'Would you tell me,' said Alice, a little timidly, 'why you are painting  those roses?' Five and Seven said nothing, but looked at Two</li>
-          <li> Two began in a low  voice, 'Why the fact is, you see, Miss, this here ought to have been a  RED rose-tree, and we put a white one in by mistake; and if the Queen  was to find it out, we should all have our heads cut off, you know</li>
-          <li>  So you see, Miss, we're doing our best, afore she comes, to&mdash;' At this  moment Five, who had been anxiously looking across the garden, called  out 'The Queen! The Queen!' and the three gardeners instantly threw  themselves flat upon their faces</li>
-          <li> There was a sound of many footsteps,  and Alice looked round, eager to see the Queen</li>
-        </ul>
-      </div>
-      <div class="style-description">
-        <h4>Ordered Lists</h4>
-      </div>
-      <div class="style-preview">
-        <ol>
-          <li>But the wicked creature was very cunning, and she finally thought of a trick that would give her what she wanted</li>
-          <li>  She placed a bar of iron in the middle of the kitchen floor, and then by her magic arts made the iron invisible to human eyes</li>
-          <li>  So that when Dorothy walked across the floor she stumbled over the bar, not being able to see it, and fell at full length</li>
-          <li>  She was not much hurt, but in her fall one of the Silver Shoes came off; and before she could reach it, the Witch had snatched it away and put it on her own skinny foot</li>
-          <li> The wicked woman was greatly pleased with the success of her trick, for as long as she had one of the shoes she owned half the power of their charm, and Dorothy could not use it against her, even had she known how to do so</li>
-          <li> The little girl, seeing she had lost one of her pretty shoes, grew angry, and said to the Witch, "Give me back my shoe!" "I will not," retorted the Witch, "for it is now my shoe, and not yours</li>
-          <li>" "You are a wicked creature!" cried Dorothy</li>
-          <li>  "You have no right to take my shoe from me</li>
-          <li>" "I shall keep it, just the same," said the Witch, laughing at her, "and someday I shall get the other one from you, too</li>
-          <li>" This made Dorothy so very angry that she picked up the bucket of water that stood near and dashed it over the Witch, wetting her from head to foot</li>
-        </ol>
+      <div class="style">
+        <div class="style-description">
+          <h4>Ordered Lists</h4>
+        </div>
+        <div class="style-preview">
+          <ol>
+            <li>But the wicked creature was very cunning, and she finally thought of a trick that would give her what she wanted</li>
+            <li>She placed a bar of iron in the middle of the kitchen floor, and then by her magic arts made the iron invisible to human eyes</li>
+            <li>So that when Dorothy walked across the floor she stumbled over the bar, not being able to see it, and fell at full length</li>
+            <li>She was not much hurt, but in her fall one of the Silver Shoes came off; and before she could reach it, the Witch had snatched it away and put it on her own skinny foot</li>
+            <li>The wicked woman was greatly pleased with the success of her trick, for as long as she had one of the shoes she owned half the power of their charm, and Dorothy could not use it against her, even had she known how to do so</li>
+            <li>The little girl, seeing she had lost one of her pretty shoes, grew angry, and said to the Witch, "Give me back my shoe!" "I will not," retorted the Witch, "for it is now my shoe, and not yours"</li>
+            <li>"You are a wicked creature!" cried Dorothy</li>
+            <li>"You have no right to take my shoe from me"</li>
+            <li>"I shall keep it, just the same," said the Witch, laughing at her, "and someday I shall get the other one from you, too"</li>
+            <li>This made Dorothy so very angry that she picked up the bucket of water that stood near and dashed it over the Witch, wetting her from head to foot</li>
+          </ol>
+        </div>
       </div>
     </section>
 
@@ -113,6 +124,8 @@
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
+    <script src="/bower_components/prism/prism.js"></script>
+    <script src="/bower_components/underscore/underscore.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
