--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -59,9 +59,10 @@
       <div class="style">
         <div class="style-description">
           <h4>Headings</h4>
+          <p>Headings are always in <b>Lato</b> and will always be uppercase.</p>
         </div>
         <div class="style-preview" id="test-src">
-          <h1 class="alpha">Cantina Heading 1</h1>
+          <h1>Cantina Heading 1</h1>
           <h2>Cantina Heading 2</h2>
           <h3>Cantina Heading 3</h3>
           <h4>Cantina Heading 4</h4>
