--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -36,7 +36,7 @@
         <div class="style-swatch--invert bg-yellow-5">$yellow-5</div>
         <div class="style-swatch bg-orange">$orange</div>
         <div class="style-swatch bg-blue">$blue</div>
-        <div class="style-swatch bg-blue-2">$blue-2</div>
+        <div class="style-swatch--invert bg-blue-2">$blue-2</div>
         <div class="style-swatch bg-blue-3">$blue-3</div>
         <div class="style-swatch bg-blue-4">$blue-4</div>
         <div class="style-swatch bg-blue-5">$blue-5</div>
