Style the section descriptions

--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -77,7 +77,7 @@
       <div class="style">
         <div class="style-description">
           <h4>Paragraphs</h4>
-          <p>This is a paragraph</p>
+          <p>Body copy is for chumps.</p>
         </div>
         <div class="style-preview">
           <p>Seven flung down his brush, and had just begun 'Well, of all the unjust  things&mdash;' when his eye chanced to fall upon Alice, as she stood watching  them, and he checked himself suddenly: the others looked round also, and  all of them bowed low.</p>
