--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -58,6 +58,24 @@
     <section class="main-content">
       <div class="style">
         <div class="style-description">
+          <h4>Typographic Scale</h4>
+          <p>Font sizes thoughout the site should leverage the following typographic scale. Don't pick random font sizes.</p>
+        </div>
+        <div class="style-preview" id="test-src">
+          <div class="giga">Giga Text</div>
+          <div class="mega">Mega Text</div>
+          <div class="alpha">Alpha Text</div>
+          <div class="beta">Beta Text</div>
+          <div class="gamma">Gamma Text</div>
+          <div class="delta">Delta Text</div>
+          <div class="epsilon">Epsilon Text (body text)</div>
+          <div class="zeta">Zeta Text</div>
+          <div class="eta">Eta Text</div>
+        </div>
+      </div>
+
+      <div class="style">
+        <div class="style-description">
           <h4>Headings</h4>
           <p>Headings are always in <b>Lato</b> and will always be uppercase.</p>
         </div>
