--- a/app/style-guide-built.html
+++ b/app/style-guide-built.html
@@ -40,7 +40,10 @@
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/templates/templates.js"></script>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/section-title-controller.js"></script>
+    <script src="scripts/color-swatch-controller.js"></script>
+    <script src="scripts/style-controller.js"></script>
+    <script src="scripts/style-data.js"></script>
     <script src="scripts/style-guide-builder.js"></script>
     <!-- endbuild -->
 </body>
