--- a/app/style-guide.html
+++ b/app/style-guide.html
@@ -148,7 +148,9 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/main.js"></script>
+    <script src="scripts/section-title-controller.js"></script>
+    <script src="scripts/color-swatch-controller.js"></script>
+    <script src="scripts/style-controller.js"></script>
     <script>
       $(function () {
         var scrollController = new ScrollMagic.Controller();
