Import element files into the built html

--- a/app/style-guide-built.html
+++ b/app/style-guide-built.html
@@ -28,6 +28,8 @@
 
     <main></main>
 
+    <div class="imported-elements">@@include('../.tmp/compiled/elements.html')</div>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/dist/jquery.js"></script>
