--- a/app/style-guide-built.html
+++ b/app/style-guide-built.html
@@ -28,7 +28,7 @@
 
     <main></main>
 
-    <div class="imported-elements">@@include('../.tmp/compiled/elements.html')</div>
+    <div id="imported-elements">@@include('../.tmp/compiled/elements.html')</div>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
