Move and rename style-data

--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,7 @@
     <script src="scripts/section-title-controller.js"></script>
     <script src="scripts/color-swatch-controller.js"></script>
     <script src="scripts/style-controller.js"></script>
-    <script src="scripts/style-data.js"></script>
+    <script src="elements.js"></script>
     <script src="scripts/style-guide-builder.js"></script>
     <!-- endbuild -->
 
